--- a/templates/chat.html
+++ b/templates/chat.html
@@ -34,7 +34,7 @@
         </div>
         <div class="server-logo">
             <span class="message__count">25</span>
-            <img src="../static/assets/server5.jpg" alt="server" />
+            <img src="../static/assets/createserver.ico" alt="server" />
         </div>
     </div>
 
