--- a/templates/login.html
+++ b/templates/login.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/login.css">
+    <!-- <link rel="stylesheet" href="../static/styles/login.css"> -->
     <link rel="shortcut icon" href="../static/images/charlar.png" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
-<body>
-    <canvas id="svgBlob"></canvas>
 
-    <div class="position">
-      <form class="container">
-        <div class="centering-wrapper">
-          <div class="section1 text-center">
-            <div class="primary-header">Welcome back!</div>
-            <div class="secondary-header">We're so excited to see you again!</div>
-            <div class="input-position">
-          <div class="form-group">
-                <h5 class="input-placeholder" id="email-txt">Username<span class="error-message" id="email-error"></span></h5>
-            <input type="email" required="true" name="logemail" class="form-style" id="logemail" autocomplete="off" style="margin-bottom: 20px;">
-            <i class="input-icon uil uil-at"></i>
-          </div>	
-              <!-- <div class="form-group">
-                <h5 class="input-placeholder" id="pword-txt">Password<span class="error-message" id="password-error"></span></h5>
-            <input type="password" required="true" name="logpass" class="form-style" id="logpass" autocomplete="on">
-            <i class="input-icon uil uil-lock-alt"></i>
-          </div> -->
+<body>
+    <!-- component -->
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
+
+    <div class="container max-w-full mx-auto py-24 px-6">
+        <div class="font-sans">
+            <div class="max-w-sm mx-auto px-6">
+                <div class="relative flex flex-wrap">
+                    <div class="w-full relative">
+                        <div class="mt-6">
+                            <div class="text-center font-semibold text-black">
+                                Add an username
+                            </div>
+
+                            <form class="mt-8">
+                                <div class="mx-auto max-w-lg">
+                                    <div class="py-2">
+                                        <span class="px-1 text-sm text-gray-600">Username</span>
+                                        <input placeholder="" type="text"
+                                            class="text-md block px-3 py-2  rounded-lg w-full 
+                bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
+                                    </div>
+                                    <div class="flex justify-between"><label
+                                            class="block text-gray-500 font-bold my-4"><input type="checkbox"
+                                                class="leading-loose text-pink-600"> <span
+                                                class="py-2 text-sm text-gray-600 leading-snug"> Remember
+                                                Me </span></label> <label class="block text-gray-500 font-bold my-4"><a
+                                                href="#"
+                                                class="cursor-pointer tracking-tighter text-black border-b-2 border-gray-200 hover:border-gray-400"><span>Forgot
+                                                    Password?</span></a></label></div> <button class="mt-3 text-lg font-semibold 
+                bg-gray-800 w-full text-white rounded-lg
+                px-6 py-3 block shadow-xl hover:text-white hover:bg-black">
+                                        Login
+                                    </button>
+                                </div>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="password-container"><a href="#" class="link">Forgot your password?</a></div>
-              <div class="btn-position">
-              <a href="#" class="btn">Enter</a>
-            </div>
-          </div>
-          <div class="horizontalSeparator"></div>
-          <!-- <div class="qr-login">
-            <div class="qr-container">
-              <img class="logo" src="https://cdn.discordapp.com/attachments/742854174324031528/771346778356318248/ChallengerCarl_2.png"/>
-              <canvas id="qr-code"></canvas>
-            </div>
-            <div class="qr-pheader">Log in with QR Code</div>
-            <div class="qr-sheader">Scan this with the <strong>scanner app </strong>to log in instantly.</div>
-          </div> -->
         </div>
-      </form>
     </div>
-    <script src="../static/scripts/login.js"></script>
 </body>
+
 </html>
