--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,6 +1,16 @@
 html, body {
 	overflow: hidden;
+	animation: fade-in 0.5s ease-in-out;
 }
+
+@keyframes fade-in {
+	from {
+	  opacity: 0;
+	}
+	to {
+	  opacity: 1;
+	}
+  }
 
 *::-webkit-scrollbar {
 	width: 10px;
@@ -148,3 +158,78 @@ html, body {
 .sidebar-profile {
 	border-left: 1px solid #dedede;
 }
+
+#search{
+	width: 375px;
+}
+
+.modal {
+	background-color: rgba(0,0,0,0.5);
+	display: none;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 20;
+	transition: visibility 0s, opacity 0.5s ease-out;
+  }
+  
+  .modal-background {
+	background-color: rgba(0,0,0,0.5);
+	height: 100%;
+	position: absolute;
+	width: 100%;
+	z-index: -1;
+  }
+  
+  .modal-content {
+	background-color: white;
+	border-radius: 5px;
+	margin: auto;
+	max-width: 500px;
+	padding: 20px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+  }
+  
+  .modal-close {
+	background-color: transparent;
+	border: none;
+	height: 40px;
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	width: 40px;
+  }
+
+  .modal.is-active {
+	visibility: visible;
+	opacity: 1;
+  }
+  
+  .modal-close:before, .modal-close:after {
+	background-color: white;
+	content: '';
+	height: 2px;
+	position: absolute;
+	top: 50%;
+	width: 20px;
+  }
+  
+  .modal-close:before {
+	transform: rotate(45deg);
+  }
+  
+  .modal-close:after {
+	transform: rotate(-45deg);
+  }
+  
+  .title {
+	font-size: 1.5rem;
+	margin-bottom: 20px;
+  }
+  
+
+  
