--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
   <link rel="shortcut icon" href="../static/images/charlar.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/emoji-mart/css/emoji-mart.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css" integrity="sha512-vEia6TQGr3FqC6h55/NdU3QSM5XR6HSl5fW71QTKrgeER98LIMGwymBVM867C1XHIkYD9nMTfWK2A0xcodKHNA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css"
+    integrity="sha512-vEia6TQGr3FqC6h55/NdU3QSM5XR6HSl5fW71QTKrgeER98LIMGwymBVM867C1XHIkYD9nMTfWK2A0xcodKHNA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://unpkg.com/emoji-mart/dist/emoji-mart.js"></script>
 </head>
 
@@ -35,9 +37,9 @@
     <div class="column is-paddingless is-3-desktop is-4-tablet is-2-mobile sidebar-user hero is-fullheight">
       <div class="top-field is-hidden-mobile has-text-centered">
         <form>
-          <div class="field">
+          <div class="field is-grouped">
             <p class="control has-icons-right">
-              <input class="input" type="search" placeholder="Search...">
+              <input class="input" id="search" type="search" placeholder="Search...">
               <span class="icon is-small is-right">
                 <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
                   xmlns="http://www.w3.org/2000/svg">
@@ -50,6 +52,16 @@
                 </svg>
               </span>
             </p>
+            <div class="control">
+              <button type="button" class="button is-rounded is-info is-grouped-right" id="open-modal-button">
+                <svg class="bi bi-plus" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd"
+                    d="M8 3.5a.5.5 0 00-.5.5v3H4.5a.5.5 0 000 1H7v3.5a.5.5 0 001 0V8h3.5a.5.5 0 000-1H8V4a.5.5 0 00-.5-.5z"
+                    clip-rule="evenodd" />
+                </svg>
+              </button>
+            </div>
           </div>
         </form>
       </div>
@@ -72,6 +84,7 @@
           </div>
         </a>
       </div>
+
     </div>
     <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless">
       <nav class="navbar has-shadow user-nav">
@@ -120,16 +133,18 @@
       <!-- Main Content columns: One for chat window another for profile -->
       <div class="columns">
         <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
-          <div class="flex-item-1">example message</div>
+          <div class="flex-item-1" id="root">
+
+          </div>
           <div class="flex-item-2">
             <form>
               <div class="field has-addons">
                 <div class="control">
-                  <input class="input" type="text" id="emojiarea" placeholder="Type your message...">
+                  <input class="input emojiarea" type="text" id="message-input" placeholder="Type your message...">
                 </div>
                 <div class="control">
                   <!-- <textarea id="textarea" cols="30" rows="10"></textarea> -->
-                  <button type="button" class="button">
+                  <button type="button" class="button is-primary" id="send-message">
                     <svg height="36px" width="36px" viewBox="0 0 36 36">
                       <g fill="none" fill-rule="evenodd">
                         <g>
@@ -152,11 +167,66 @@
       </div>
     </div>
   </div>
+
+  <!-- modal -->
+  <div class="modal" id="my-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Crear nueva sala</p>
+        <button class="delete" aria-label="close" id="close-modal-button"></button>
+      </header>
+      <section class="modal-card-body">
+        <div class="field">
+          <label class="label">Nombre de la sala</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Escribe el nombre de la sala aquí">
+          </div>
+        </div>
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success">Guardar</button>
+        <button class="button" id="cancel-modal-button">Cancelar</button>
+      </footer>
+    </div>
+  </div>
   
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
   <script>
-    $(`#emojiarea`).emojioneArea({
+    const openModalButton = document.querySelector('#open-modal-button');
+    const modal = document.querySelector('#my-modal');
+  
+    openModalButton.onclick = () => {
+      modal.classList.toggle('is-active');
+    }
+  
+    const closeModalButton = document.querySelector('#close-modal-button');
+    const cancelButton = document.querySelector('.modal-card-foot button.button:last-child');
+  
+    closeModalButton.onclick = () => {
+      modal.classList.toggle('is-active');
+    }
+  
+    cancelButton.onclick = () => {
+      modal.classList.toggle('is-active');
+    }
+  
+    document.querySelector("#modal-form").addEventListener("submit", function (event) {
+      event.preventDefault();
+    });
+  </script>
+
+
+
+
+  <script src="{{ url_for('static', filename='scripts/socket.io.min.js') }}"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+    integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"
+    integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    $(`.emojiarea`).emojioneArea({
       pickerPosition: 'top'
     });
   </script>
