--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -84,6 +84,7 @@ html, body {
 }
 
 .user-nav {
+	margin-top: 13px;
 	padding-top: 20px;
 	padding-bottom: 8px;
 	padding-left: 12px;
@@ -128,6 +129,7 @@ html, body {
 }
   
 .flex-item-2 {
+	margin-bottom: 15px;
 	width: 100%;
     height: 80px;
     padding: 10px 12px;
