--- a/templates/chat.html
+++ b/templates/chat.html
@@ -43,21 +43,31 @@
       </div>
     </div>
   </nav> -->
-  
+
   <nav class="bg-gray-700 border-gray-200">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="" class="flex items-center">
-          <img src="https://flowbite.com/docs/images/logo.svg" class="rounded-full w-15 h-15" alt="Flowbite Logo" />
-          <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Flack IO</span>
+        <img src="https://flowbite.com/docs/images/logo.svg" class="rounded-full w-15 h-15" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Flack IO</span>
       </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+      <button data-collapse-toggle="navbar-default" type="button"
+        class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
-        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+            clip-rule="evenodd"></path>
+        </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a href="#" id="open-modal-button" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">crear sala</a>
+            <a href="#" id="open-modal-button"
+              class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              aria-current="page">crear sala</a>
           </li>
         </ul>
       </div>
@@ -106,13 +116,13 @@
             <div class="media">
               <div class="media-left">
                 <figure class="image is-48x48 is-32x32-mobile">
-                  <img src="https://via.placeholder.com/150" alt="Image" class="is-rounded">
+                  <svg class="is-rounded" width="25" height="25" data-jdenticon-value="Diego Oviedo"></svg>
                 </figure>
               </div>
               <div class="media-content is-hidden-mobile">
                 <div class="content">
                   <p>
-                    <strong>Room Name</strong>
+                    <strong>${roomName}</strong>
                     <br><small>...</small>
                   </p>
                 </div>
@@ -130,13 +140,13 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                <img src="https://via.placeholder.com/150" alt="Image" class="is-rounded">
+                <img src="https://api.dicebear.com/6.x/identicon/svg?seed=FlackIO" alt="Image" class="is-rounded">
               </figure>
             </div>
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Room name</strong>
+                  <strong>General Room</strong>
                   <br>
                   <small>...</small>
                 </p>
@@ -307,19 +317,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"
     integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
-    <!-- emoji -->
-    <script>
-      $(`.emojiarea`).emojioneArea({
-        pickerPosition: 'top'
-  
-      });
-    </script>
-    <!-- end emoji -->
-    
+
+  <!-- emoji -->
+  <script>
+    $(`.emojiarea`).emojioneArea({
+      pickerPosition: 'top'
+
+    });
+  </script>
+  <!-- end emoji -->
+
 </body>
 
 </html>
