--- a/templates/chat.html
+++ b/templates/chat.html
@@ -134,73 +134,74 @@
       <!-- end room -->
 
     </div>
-    <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless">
-      <nav class="navbar has-shadow user-nav">
-        <div class="navbar-start">
-          <div class="media">
-            <div class="media-left">
-              <figure class="image is-48x48">
-                <img src="https://api.dicebear.com/6.x/identicon/svg?seed=FlackIO" alt="Image" class="is-rounded">
-              </figure>
-            </div>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>General Room</strong>
-                  <br>
-                  <small>...</small>
-                </p>
+    <section id="room_chanel">
+      <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless">
+        <nav class="navbar has-shadow user-nav">
+          <div class="navbar-start">
+            <div class="media">
+              <div class="media-left">
+                <figure class="image is-48x48">
+                  <img src="https://api.dicebear.com/6.x/identicon/svg?seed=FlackIO" alt="Image" class="is-rounded">
+                </figure>
+              </div>
+              <div class="media-content">
+                <div class="content">
+                  <p>
+                    <strong>General Room</strong>
+                    <br>
+                    <small>...</small>
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
         </div>
         <div class="navbar-end">
           <a class="navbar-item">
             <span class="icon is-size-2">
               <svg class="bi bi-gear-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z"
-                  clip-rule="evenodd" />
-              </svg>
-            </span>
-          </a>
-          <a class="navbar-item">
-            <span class="icon is-size-2">
-              <svg class="bi bi-info-circle-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M8 16A8 8 0 108 0a8 8 0 000 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 100-2 1 1 0 000 2z"
-                  clip-rule="evenodd" />
-              </svg>
-            </span>
-          </a>
-        </div>
-      </nav>
-
-      <!-- Main Content columns: One for chat window another for profile -->
-      <div class="columns">
-        <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
-          <div class="flex-item-1">
-            <p id="root"></p>
-          </div>
-          <div class="flex-item-2">
-            <form>
-              <div class="field has-addons">
-                <div class="control">
-                  <input class="input emojiarea" type="text" id="message-input" placeholder="Type your message..."
-                    onkeydown="handleKeyDown(event)">
-                </div>
-                <div class="control">
-                  <!-- <textarea id="textarea" cols="30" rows="10"></textarea> -->
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd"
+              d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z"
+              clip-rule="evenodd" />
+            </svg>
+          </span>
+        </a>
+        <a class="navbar-item">
+          <span class="icon is-size-2">
+            <svg class="bi bi-info-circle-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+            d="M8 16A8 8 0 108 0a8 8 0 000 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 100-2 1 1 0 000 2z"
+            clip-rule="evenodd" />
+          </svg>
+        </span>
+      </a>
+    </div>
+  </nav>
+  
+  <!-- Main Content columns: One for chat window another for profile -->
+  <div class="columns">
+    <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
+      <div class="flex-item-1">
+        <p id="root"></p>
+      </div>
+      <div class="flex-item-2">
+        <form>
+          <div class="field has-addons">
+            <div class="control">
+              <input class="input emojiarea" type="text" id="message-input" placeholder="Type your message..."
+              onkeydown="handleKeyDown(event)">
+            </div>
+            <div class="control">
+              <!-- <textarea id="textarea" cols="30" rows="10"></textarea> -->
                   <button type="button" class="button" id="send-message" value="Enviar">
                     <svg height="36px" width="36px" viewBox="0 0 36 36">
                       <g fill="none" fill-rule="evenodd">
                         <g>
                           <polygon points="0 36 36 36 36 0 0 0"></polygon>
                           <path
-                            d="M31.1059281,19.4468693 L10.3449666,29.8224462 C8.94594087,30.5217547 7.49043432,29.0215929 8.17420251,27.6529892 C8.17420251,27.6529892 10.7473302,22.456697 11.4550902,21.0955966 C12.1628503,19.7344961 12.9730756,19.4988922 20.4970248,18.5264632 C20.7754304,18.4904474 21.0033531,18.2803547 21.0033531,17.9997309 C21.0033531,17.7196073 20.7754304,17.5095146 20.4970248,17.4734988 C12.9730756,16.5010698 12.1628503,16.2654659 11.4550902,14.9043654 C10.7473302,13.5437652 8.17420251,8.34697281 8.17420251,8.34697281 C7.49043432,6.9788693 8.94594087,5.47820732 10.3449666,6.1775158 L31.1059281,16.553593 C32.298024,17.1488555 32.298024,18.8511065 31.1059281,19.4468693"
-                            fill="#363636"></path>
+                          d="M31.1059281,19.4468693 L10.3449666,29.8224462 C8.94594087,30.5217547 7.49043432,29.0215929 8.17420251,27.6529892 C8.17420251,27.6529892 10.7473302,22.456697 11.4550902,21.0955966 C12.1628503,19.7344961 12.9730756,19.4988922 20.4970248,18.5264632 C20.7754304,18.4904474 21.0033531,18.2803547 21.0033531,17.9997309 C21.0033531,17.7196073 20.7754304,17.5095146 20.4970248,17.4734988 C12.9730756,16.5010698 12.1628503,16.2654659 11.4550902,14.9043654 C10.7473302,13.5437652 8.17420251,8.34697281 8.17420251,8.34697281 C7.49043432,6.9788693 8.94594087,5.47820732 10.3449666,6.1775158 L31.1059281,16.553593 C32.298024,17.1488555 32.298024,18.8511065 31.1059281,19.4468693"
+                          fill="#363636"></path>
                         </g>
                       </g>
                     </svg>
@@ -215,6 +216,7 @@
         </div>
       </div>
     </div>
+  </section>
   </div>
 
   <!-- modal -->
