--- a/templates/chat.html
+++ b/templates/chat.html
@@ -134,8 +134,7 @@
       <!-- end room -->
 
     </div>
-    <section id="room_chanel">
-      <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless">
+      <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless" id="change_room">
         <nav class="navbar has-shadow user-nav">
           <div class="navbar-start">
             <div class="media">
@@ -216,7 +215,6 @@
         </div>
       </div>
     </div>
-  </section>
   </div>
 
   <!-- modal -->
