--- a/templates/chat.html
+++ b/templates/chat.html
@@ -110,7 +110,7 @@
       </div>
 
       <!-- room -->
-      <section id="roomList">
+      <section id="roomList" class="scrollable">
         <!-- <div class="list">
           <a class="list-item active box">
             <div class="media">
@@ -229,7 +229,7 @@
         <div class="field">
           <label class="label">Nombre de la sala</label>
           <div class="control">
-            <input class="input" id="roomNameInput" type="text" placeholder="Escribe el nombre de la sala aquí">
+            <input class="input" id="roomNameInput" type="text" placeholder="Escribe el nombre de la sala aquí" autocomplete="off">
           </div>
         </div>
       </section>
