--- a/templates/chat.html
+++ b/templates/chat.html
@@ -135,7 +135,7 @@
 
     </div>
       <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless" id="change_room">
-        <nav class="navbar has-shadow user-nav">
+        <!-- <nav class="navbar has-shadow user-nav">
           <div class="navbar-start">
             <div class="media">
               <div class="media-left">
@@ -178,7 +178,6 @@
     </div>
   </nav>
   
-  <!-- Main Content columns: One for chat window another for profile -->
   <div class="columns">
     <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
       <div class="flex-item-1">
@@ -192,7 +191,6 @@
               onkeydown="handleKeyDown(event)">
             </div>
             <div class="control">
-              <!-- <textarea id="textarea" cols="30" rows="10"></textarea> -->
                   <button type="button" class="button" id="send-message" value="Enviar">
                     <svg height="36px" width="36px" viewBox="0 0 36 36">
                       <g fill="none" fill-rule="evenodd">
@@ -213,7 +211,7 @@
         <div class="column is-hidden-mobile sidebar-profile">
           Profile Section
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
