--- a/templates/chat.html
+++ b/templates/chat.html
@@ -135,7 +135,8 @@
 
     </div>
       <div class="column is-9-desktop is-8-tablet is-10-mobile is-paddingless" id="change_room">
-        <!-- <nav class="navbar has-shadow user-nav">
+        <!-- room section -->
+        <nav class="navbar has-shadow user-nav">
           <div class="navbar-start">
             <div class="media">
               <div class="media-left">
@@ -181,7 +182,10 @@
   <div class="columns">
     <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
       <div class="flex-item-1">
-        <p id="root"></p>
+        <div class="bg-gray-100 border border-gray-200 rounded-lg px-4 py-2 max-w-lg">
+          <time class="mb-1 text-xs font-normal text-black-900 sm:order-last sm:mb-0" id="datetime"></time>
+          <p id="root" class="mb-2 break-all"></p>
+        </div>              
       </div>
       <div class="flex-item-2">
         <form>
@@ -211,7 +215,8 @@
         <div class="column is-hidden-mobile sidebar-profile">
           Profile Section
         </div>
-      </div> -->
+      </div>
+      <!-- end room section -->
     </div>
   </div>
 
