--- a/templates/chat.html
+++ b/templates/chat.html
@@ -48,7 +48,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="" class="flex items-center">
         <img src="https://flowbite.com/docs/images/logo.svg" class="rounded-full w-15 h-15" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Flack IO</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Flack IO <span id="name_user">{{name_user}}</span></span>
       </a>
       <button data-collapse-toggle="navbar-default" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -110,7 +110,8 @@
       </div>
 
       <!-- room -->
-      <section id="roomList" class="scrollable">
+
+      <ul id="roomList" class="scrollable">
         <!-- <div class="list">
           <a class="list-item active box">
             <div class="media">
@@ -130,7 +131,7 @@
             </div>
           </a>
         </div> -->
-      </section>
+      </ul>
       <!-- end room -->
 
     </div>
@@ -140,14 +141,14 @@
           <div class="navbar-start">
             <div class="media">
               <div class="media-left">
-                <figure class="image is-48x48">
-                  <img src="https://api.dicebear.com/6.x/identicon/svg?seed=FlackIO" alt="Image" class="is-rounded">
+                <figure class="image is-48x48" id="Figura_omar">
+                  <img src="https://api.dicebear.com/6.x/identicon/svg?seed=General Room" alt="Image" class="is-rounded">
                 </figure>
               </div>
               <div class="media-content">
                 <div class="content">
                   <p>
-                    <strong>General Room</strong>
+                    <strong id="name_room">General Room</strong>
                     <br>
                     <small>...</small>
                   </p>
@@ -180,15 +181,14 @@
   </nav>
   
   <div class="columns">
-    <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window">
-      <div class="flex-item-1">
-        <div class="bg-gray-100 border border-gray-200 rounded-lg px-4 py-2 max-w-lg">
-          <time class="mb-1 text-xs font-normal text-black-900 sm:order-last sm:mb-0" id="datetime"></time>
-          <p id="root" class="mb-2 break-all"></p>
-        </div>              
+    <div class="column is-8 is-12-mobile is-flex hero is-fullheight message-window scrollable" >
+      <div class="flex-item-1" id="agregar-mensaje">
+       <!-- mensajes-->
+        
+
       </div>
       <div class="flex-item-2">
-        <form>
+        <form class="form-fixed">
           <div class="field has-addons">
             <div class="control">
               <input class="input emojiarea" type="text" id="message-input" placeholder="Type your message..."
@@ -268,9 +268,9 @@
       modal.classList.toggle('is-active');
     }
 
-    document.querySelector("#modal-form").addEventListener("submit", function (event) {
+   /* document.querySelector("#modal-form").addEventListener("submit", function (event) {
       event.preventDefault();
-    });
+    }); */
   </script>
   <!-- end modal troger -->
 
