--- a/templates/login.html
+++ b/templates/login.html
@@ -25,11 +25,11 @@
                                 Add an username
                             </div>
 
-                            <form class="mt-8">
+                            <form class="mt-8" action="/" method="post">
                                 <div class="mx-auto max-w-lg">
                                     <div class="py-2">
                                         <span class="px-1 text-sm text-gray-600">Username</span>
-                                        <input placeholder="" type="text"
+                                        <input placeholder="nombre de usuario" name="name" type="text"
                                             class="text-md block px-3 py-2  rounded-lg w-full 
                 bg-white border-2 border-gray-300 placeholder-gray-600 shadow-md focus:placeholder-gray-500 focus:bg-white focus:border-gray-600 focus:outline-none">
                                     </div>
