--- a/templates/chat.html
+++ b/templates/chat.html
@@ -212,8 +212,18 @@
             </form>
           </div>
         </div>
-        <div class="column is-hidden-mobile sidebar-profile">
-          Profile Section
+        <div class="column is-hidden-mobile sidebar-profile" id="users">
+          Online Users
+          <!-- <section class="bg-gray-100 py-8">
+            <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:px-8">
+              <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+                <img class="w-full" src="ruta-de-la-imagen" alt="Imagen de perfil">
+                <div class="p-4">
+                  <h3 class="text-lg font-bold mb-2"></h3>
+                </div>
+              </div>
+            </div>
+          </section> -->
         </div>
       </div>
       <!-- end room section -->
