--- a/templates/chat.html
+++ b/templates/chat.html
@@ -47,8 +47,8 @@
   <nav class="bg-gray-700 border-gray-200">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="" class="flex items-center">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="rounded-full w-15 h-15" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Flack IO <span id="name_user">{{name_user}}</span></span>
+        <!-- <img src="https://flowbite.com/docs/images/logo.svg" class="rounded-full w-15 h-15" alt="Flowbite Logo" /> -->
+        <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Bienvenido <span id="name_user">{{name_user}}</span></span>
       </a>
       <button data-collapse-toggle="navbar-default" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -254,6 +254,20 @@
 
 
 
+<!-- Agrega el siguiente script al final del cuerpo del documento -->
+<script>
+  // Obtener el botón del menú desplegable
+  const toggleButton = document.querySelector('[data-collapse-toggle="navbar-default"]');
+  
+  // Obtener el menú desplegable
+  const navbarMenu = document.getElementById('navbar-default');
+  
+  // Agregar evento de clic al botón del menú desplegable
+  toggleButton.addEventListener('click', function() {
+    // Alternar la clase "hidden" en el menú desplegable al hacer clic en el botón
+    navbarMenu.classList.toggle('hidden');
+  });
+</script>
 
 
 
