--- a/templates/chat.html
+++ b/templates/chat.html
@@ -67,7 +67,12 @@
           <li>
             <a href="#" id="open-modal-button"
               class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
-              aria-current="page">crear sala</a>
+              aria-current="page">Add a new room</a>
+          </li>
+          <li>
+            <a href="/logout" id="open-modal-button"
+              class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              aria-current="page">Logout</a>
           </li>
         </ul>
       </div>
